Changed Style.css header to have the correct info in required fields

--- a/style.css
+++ b/style.css
@@ -1,18 +1,15 @@
 /**
  * Theme Name:        Ember Sheepfolds
- * Theme URI:         http://embersheepfolds.local/
  * Description:       Custom theme for a restaurant in Sunderland.
  * Version:           1.0.0
  * Author:            Isaac Patrickson
  * Author URI:        https://www.linkedin.com/in/isaac-patrickson-a4252b241/
- * Tags:              block-patterns, full-site-editing
  * Text Domain:       ember-sheepfolds
- * Domain Path:       /assets/lang
- * Tested up to:      #
- * Requires at least: #
+ * Tested up to:      6.6.2
+ * Requires at least: 6.6.2
  * Requires PHP:      #
  * License:           GNU General Public License v2.0 or later
  * License URI:       https://www.gnu.org/licenses/gpl-2.0.html
  */
-
+ 
  
