--- a/style.css
+++ b/style.css
@@ -7,9 +7,8 @@
  * Text Domain:       ember-sheepfolds
  * Tested up to:      6.6.2
  * Requires at least: 6.6.2
- * Requires PHP:      #
+ * Requires PHP:      8.3
  * License:           GNU General Public License v2.0 or later
  * License URI:       https://www.gnu.org/licenses/gpl-2.0.html
  */
- 
  
