--- a/style.css
+++ b/style.css
@@ -1,13 +1,14 @@
 /**
  * Theme Name:        Ember Sheepfolds
  * Description:       Custom theme for a restaurant in Sunderland.
- * Version:           1.0.0
+ * Version:           0.0.1
  * Author:            Isaac Patrickson
  * Author URI:        https://www.linkedin.com/in/isaac-patrickson-a4252b241/
  * Text Domain:       ember-sheepfolds
  * Tested up to:      6.6.2
  * Requires at least: 6.6.2
- * Requires PHP:      8.3
+ * Requires PHP:      8.2.23
+ * Tags: full-site-editing
  * License:           GNU General Public License v2.0 or later
  * License URI:       https://www.gnu.org/licenses/gpl-2.0.html
  */
