--- a/style.css
+++ b/style.css
@@ -1,15 +1,15 @@
-/**
- * Theme Name:        Ember Sheepfolds
- * Description:       Custom theme for a restaurant in Sunderland.
- * Version:           0.0.1
- * Author:            Isaac Patrickson
- * Author URI:        https://www.linkedin.com/in/isaac-patrickson-a4252b241/
- * Text Domain:       ember-sheepfolds
- * Tested up to:      6.6.2
- * Requires at least: 6.6.2
- * Requires PHP:      8.2.23
- * Tags: full-site-editing
- * License:           GNU General Public License v2.0 or later
- * License URI:       https://www.gnu.org/licenses/gpl-2.0.html
- */
-
+/*
+Theme Name: Ember Sheepfolds
+Theme URI: https://bitbucket.org/test_area/ember-theme-one/src/main/
+Author: Isaac Patrickson
+Author URI: https://www.linkedin.com/in/isaac-patrickson-a4252b241/
+Description: Custom theme for a restaurant in Sunderland.
+Requires at least: 6.6.2
+Tested up to: 6.6
+Requires PHP: 8.2.23
+Version: 0.0.2
+License: GNU General Public License v2.0 or later
+License URI: https://www.gnu.org/licenses/gpl-2.0.html
+Text Domain: ember-sheepfolds
+Tags: full-site-editing
+*/
